# theme_linux

./: README.md  main.py  metadata.json  pyproject.toml  requirements.txt
app/: main.py
app/api/: ocs_client.py
app/models/: theme.py
app/services/: installer_service.py  theme_service.py
app/ui/: routes.py
app/ui/static/: app.js
app/ui/templates/: index.html
app/utils/: cache.py  config.py
src/: App.tsx
themectl/: api.py  cli.py  installer.py  main.py  preview.py  tui.py  utils.py
