[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "themectl"
version = "2.0.0"
description = "A modern Linux theme manager with a local web UI powered by FastAPI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Themectl Contributors"}
]
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.4",
    "requests>=2.31.0",
    "uvicorn>=0.35.0"
]

[project.scripts]
themectl = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
